--- a/src/StyleBattle.css
+++ b/src/StyleBattle.css
@@ -39,8 +39,8 @@
 }
 
 .hullShield {
-    -fx-font-size: 5px;
-    -fx-text-fill: rgba(255, 255, 255, 0);
+    -fx-font-size: 10px;
+    -fx-text-fill: #ffffff;
     -fx-font-weight: bold;
     -fx-font-family: "Century Gothic";
 }
